[gd_scene load_steps=6 format=3 uid="uid://ceeyt3otuh1q0"]

[ext_resource type="Theme" uid="uid://dflyw1gojgi00" path="res://characters/temas/new_theme.tres" id="1_1dei0"]
[ext_resource type="Script" uid="uid://srdl85sasv27" path="res://characters/scripts/pause_menu.gd" id="1_ohxgy"]
[ext_resource type="AudioStream" uid="uid://cn7f24fpkk6mt" path="res://sounds/menu/Button-Hover-Sound.mp3" id="3_jsbep"]

[sub_resource type="InputEventAction" id="InputEventAction_ohxgy"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_jsbep"]
events = [SubResource("InputEventAction_ohxgy")]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_ohxgy")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.0235294, 0.054902, 0.498039)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="resume_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_1dei0")
shortcut = SubResource("Shortcut_jsbep")
text = "Voltar"

[node name="menu_prin_btn2" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_1dei0")
text = "Menu Principal"

[node name="HouverSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 57)
stream = ExtResource("3_jsbep")
volume_db = -10.0

[connection signal="mouse_entered" from="menu_holder/resume_btn" to="." method="_on_resume_btn_mouse_entered"]
[connection signal="pressed" from="menu_holder/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="mouse_entered" from="menu_holder/menu_prin_btn2" to="." method="_on_menu_prin_btn_2_mouse_entered"]
[connection signal="pressed" from="menu_holder/menu_prin_btn2" to="." method="_on_menu_prin_btn_2_pressed"]
